[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/menus/Menus.gd" type="Script" id=1]
[ext_resource path="res://assets/main_menu/title.png" type="Texture" id=2]
[ext_resource path="res://scenes/gui/GUIButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menus/OptionsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/iosevka-bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/main_menu/artwork_slime.png" type="Texture" id=6]
[ext_resource path="res://scenes/menus/ConnectMenu.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 5 )

[node name="Menus" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 696.0
margin_bottom = 920.0

[node name="Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 696.0
margin_bottom = 94.0
texture = ExtResource( 2 )

[node name="MainMenu" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 696.0
margin_bottom = 821.0
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="Singleplayer" parent="HBoxContainer/VBoxContainer/MainMenu" instance=ExtResource( 3 )]
margin_top = 235.0
margin_right = 696.0
margin_bottom = 287.0
text = "Singleplayer"

[node name="Multiplayer" parent="HBoxContainer/VBoxContainer/MainMenu" instance=ExtResource( 3 )]
margin_top = 302.0
margin_right = 696.0
margin_bottom = 354.0
text = "Multiplayer"

[node name="Options" parent="HBoxContainer/VBoxContainer/MainMenu" instance=ExtResource( 3 )]
margin_top = 369.0
margin_right = 696.0
margin_bottom = 421.0
text = "Options"

[node name="Exit" parent="HBoxContainer/VBoxContainer/MainMenu" instance=ExtResource( 3 )]
margin_top = 436.0
margin_right = 696.0
margin_bottom = 488.0
text = "Exit"

[node name="MultiplayerMenu" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 347.0
margin_right = 696.0
margin_bottom = 527.0
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="Host" parent="HBoxContainer/VBoxContainer/MultiplayerMenu" instance=ExtResource( 3 )]
margin_right = 696.0
margin_bottom = 50.0
text = "Host Server"

[node name="Join" parent="HBoxContainer/VBoxContainer/MultiplayerMenu" instance=ExtResource( 3 )]
margin_top = 65.0
margin_right = 696.0
margin_bottom = 115.0
text = "Join Server"

[node name="Back" parent="HBoxContainer/VBoxContainer/MultiplayerMenu" instance=ExtResource( 3 )]
margin_top = 130.0
margin_right = 696.0
margin_bottom = 180.0
text = "Back"

[node name="OptionsMenu" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 347.0
margin_right = 696.0
margin_bottom = 513.0
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="OptionsMenu" parent="HBoxContainer/VBoxContainer/OptionsMenu" instance=ExtResource( 4 )]
margin_right = 500.0

[node name="Back" parent="HBoxContainer/VBoxContainer/OptionsMenu" instance=ExtResource( 3 )]
margin_top = 90.0
margin_right = 696.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 1 )
text = "Back"

[node name="Version" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 825.0
margin_right = 696.0
margin_bottom = 920.0
custom_fonts/font = SubResource( 2 )
text = "v0.0.1
Bruh Productions"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
visible = false
margin_left = 700.0
margin_right = 1200.0
margin_bottom = 608.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Artwork" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_top = 8.0
margin_right = 500.0
margin_bottom = 599.0
texture = ExtResource( 6 )

[node name="ConnectMenu" parent="." instance=ExtResource( 7 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 704.0
margin_top = 423.0
margin_right = 1216.0
margin_bottom = 657.0
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MainMenu/Singleplayer" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MainMenu/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MainMenu/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MainMenu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MultiplayerMenu/Host" to="ConnectMenu" method="_on_Host_pressed" binds= [ true ]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MultiplayerMenu/Join" to="ConnectMenu" method="_on_Host_pressed" binds= [ false ]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MultiplayerMenu/Back" to="." method="_on_Back_pressed" binds= [ "HBoxContainer/VBoxContainer/MultiplayerMenu" ]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/OptionsMenu/Back" to="." method="_on_Back_pressed" binds= [ "HBoxContainer/VBoxContainer/OptionsMenu" ]]
[connection signal="host" from="ConnectMenu" to="." method="_on_ConnectMenu_host"]
[connection signal="join" from="ConnectMenu" to="." method="_on_ConnectMenu_join"]
